--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@viro-community/react-viro": "^2.21.0",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-fs": "^2.18.0",
+    "react-native-share": "^7.3.5",
+    "react-native-view-shot": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
