--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.65.1",
     "react-native-fs": "^2.18.0",
     "react-native-share": "^7.3.5",
+    "react-native-social-share": "^1.6.5",
     "react-native-view-shot": "^3.1.2"
   },
   "devDependencies": {
